--- a/docker/ngnix-proxy/docker-compose.yml
+++ b/docker/ngnix-proxy/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       DB_MYSQL_PASSWORD__FILE: /run/secrets/MYSQL_PWD
       DB_MYSQL_NAME: "${NG_DB}"
       DISABLE_IPV6: 'true'
-      TZ: "America/Montreal"
+      TZ: "America/Toronto"
     depends_on:
       - db_ngnix
     volumes:
