--- a/docker/apps/joplin-server/docker-compose.yml
+++ b/docker/apps/joplin-server/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     labels:
       - "docker-volume-backup.stop-during-backup=true"
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
-      - docker-volume-backup.archive-pre=/bin/bash -c 'pg_dump -U $(< $POSTGRES_USER_FILE) $(< $POSTGRES_DB_FILE) > /var/lib/postgresql/joplin-backups/bck_db_joplin$(date +%Y%m%d-%H%M).sql'
+      - docker-volume-backup.archive-pre=/bin/bash -c 'pg_dump -U $(< /run/secrets/POSTGRES_USER) $(< /run/secrets/POSTGRES_DB) > /var/lib/postgresql/joplin-backups/bck_db_joplin$(date +%Y%m%d-%H%M).sql'
 
   joplin:
     image: joplin/server:latest
