--- a/docker/portainer-agent/docker-compose.yml
+++ b/docker/portainer-agent/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     deploy:
       mode: global
     image: portainer/agent:latest
+    security_opt:
+      - no-new-privileges:true
     ports:
       - "9001:9001"
     volumes:
