--- a/docker/portainer-agent/docker-compose.yml
+++ b/docker/portainer-agent/docker-compose.yml
@@ -10,8 +10,10 @@ services:
     ports:
       - "9001:9001"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/var/lib/docker/volumes:/var/lib/docker/volumes"
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     networks:
       - portainer-agent_default
     restart: unless-stopped
