--- a/docker/password-manager/docker-compose.yml
+++ b/docker/password-manager/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     image: vaultwarden/server:latest
     security_opt:
       - no-new-privileges:true
-    cap_drop:
-      - ALL
+    #cap_drop:
+    #  - ALL
     volumes:
       - "/opt/data-docker/vaultwarden:/data"
     ports:
