--- a/docker/heimdall/docker-compose.yml
+++ b/docker/heimdall/docker-compose.yml
@@ -7,10 +7,6 @@ services:
     ports:
       - "8100:80"
       - "9100:443"
-    environment:
-      PUID: 1000
-      PGID: 1000
-      TZ: America/Toronto
     security_opt:
       - no-new-privileges:true
     volumes:
@@ -18,3 +14,5 @@ services:
     labels:
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
       - "docker-volume-backup.stop-during-backup=true"
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
