--- a/docker/password-manager/docker-compose.yml
+++ b/docker/password-manager/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - no-new-privileges:true
     volumes:
       - "/opt/data-docker/vaultwarden:/data"
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     ports:
       - "8100:80"
     environment:
