--- a/docker/firezone/docker-compose.yml
+++ b/docker/firezone/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     env_file:
       # This should contain a list of env vars for configuring Firezone.
       # See https://docs.firezone.dev/reference/env-vars for more info.
-      - ${FZ_INSTALL_DIR:-.}/.env
+      - .env
     volumes:
       # IMPORTANT: Persists WireGuard private key and other data. If
       # /var/firezone/private_key exists when Firezone starts, it is
@@ -84,8 +84,8 @@ services:
       <<: *default-deploy
 
   postgres:
-    image: postgres:15
-    container_name: postgres
+    image: postgres:16
+    container_name: firezone-postgres
     security_opt:
       - no-new-privileges:true
     volumes:
@@ -106,13 +106,13 @@ services:
       <<: *default-deploy
       update_config:
         order: stop-first
-  adminer:
+  firezone-adminer:
     image: adminer:latest
     container_name: adminer
     depends_on:
       - postgres
     environment:
-      ADMINER_DEFAULT_SERVER: postgres
+      ADMINER_DEFAULT_SERVER: firezone-postgres
     networks:
       - firezone-network
     restart: unless-stopped
