--- a/docker/firezone/docker-compose.yml
+++ b/docker/firezone/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     env_file:
       # This should contain a list of env vars for configuring Firezone.
       # See https://docs.firezone.dev/reference/env-vars for more info.
-      - .env
+      - ${FIREZONE_ETC_ENV_FILE:-.env}
     volumes:
       # IMPORTANT: Persists WireGuard private key and other data. If
       # /var/firezone/private_key exists when Firezone starts, it is
