--- a/docker/pihole/docker-compose.yml
+++ b/docker/pihole/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - '/opt/data-docker/pihole/var:/var/log/pihole'
     restart: unless-stopped
     security_opt:
-      - no-new-privileges:true
+      - no-new-privileges:false
     networks:
       pihole_local_network:
         ipv4_address: 172.20.0.2
