--- a/docker/apps/searxng-data/docker-compose.yml
+++ b/docker/apps/searxng-data/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - "8200:8080"
     volumes:
       - "/opt/data-docker/searxng/data:/etc/searxng"
+      - "/etc/localtime:/etc/localtime:ro"
+      - "/etc/timezone:/etc/timezone:ro"
     environment:
       - SEARXNG_BASE_URL=https://${SEARXNG_HOSTNAME:-localhost}/
       - TZ=America/Toronto
