--- a/docker/apps/gotify/docker-compose.yml
+++ b/docker/apps/gotify/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "/opt/data-docker/gotify/data:/app/data"
     environment:
       TZ: 'America/Toronto'
-      GOTIFY_DEFAULTUSER_PASS: 'strong-gotify-key'
+      GOTIFY_DEFAULTUSER_PASS: ${GOTIFY_DEFAULTUSER_PASS}
     labels:
       - "docker-volume-backup.stop-during-backup=true"
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
@@ -37,7 +37,7 @@ services:
     volumes:
       - "/opt/data-docker/gotify/igotify:/app/data"
     environment:
-      IGOTIFY_CLIENT_TOKEN: '<CLIENT_TOKEN>'  # create a client in gotify an add here the client token
+      IGOTIFY_CLIENT_TOKEN: ${IGOTIFY_CLIENT_TOKEN}  # create a client in gotify an add here the client token
       GOTIFY_SERVER_URL: 'http://gotify'   # default container name from gotify server
     labels:
       - "docker-volume-backup.stop-during-backup=true"
