--- a/docker/apps/gotify/docker-compose.yml
+++ b/docker/apps/gotify/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "8680:80"
     volumes:
       - "/opt/data-docker/gotify/data:/app/data"
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     environment:
       TZ: 'America/Toronto'
       GOTIFY_DEFAULTUSER_PASS: ${GOTIFY_DEFAULTUSER_PASS}
@@ -36,6 +38,8 @@ services:
       - "8681:8080"
     volumes:
       - "/opt/data-docker/gotify/igotify:/app/data"
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     environment:
       IGOTIFY_CLIENT_TOKEN: ${IGOTIFY_CLIENT_TOKEN}  # create a client in gotify an add here the client token
       GOTIFY_SERVER_URL: 'http://gotify'   # default container name from gotify server
