--- a/docker/apps/vikunja/docker-compose.yml
+++ b/docker/apps/vikunja/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "7802:3456"
     volumes:
       - "/opt/data-docker/vikunja/files:/app/vikunja/files"
+      - "/opt/data-docker/vikunja/logs:/app/logs"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
     depends_on:
@@ -37,9 +38,9 @@ services:
       - CONFIG_SQLPWD
     environment:
       MYSQL_ROOT_PASSWORD__FILE: run/secrets/DB_ROOT_PWD
-      MYSQL_USER: "${VIKUNJA_USER}"
+      MYSQL_USER: "vikunja"
       MYSQL_PASSWORD__FILE: run/secrets/MYSQL_PWD
-      MYSQL_DATABASE: "${VIKUNJA_DB}"
+      MYSQL_DATABASE: "vikunja"
     security_opt:
       - no-new-privileges:true
     volumes:
@@ -48,9 +49,9 @@ services:
       - "/etc/localtime:/etc/localtime:ro"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u $$MYSQL_USER --password=$$MYSQL_PASSWORD"]
-      interval: 2s
-      start_period: 30s
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u vikunja --password=$(< /run/secrets/MYSQL_PWD)"]
+      interval: 30s
+      start_period: 40s
     labels:
       - "docker-volume-backup.stop-during-backup=true"
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
@@ -59,7 +60,7 @@ services:
     image: "redis:alpine"
     container_name: "vikunja_redis"
     restart: unless-stopped
-    command: redis-server --save 60 1 --loglevel warning --requirepass ${VK_REDIS_PASSWORD}
+    command: redis-server --save 60 1 --loglevel warning
     volumes:
       - "cache:/data"
       - "/etc/timezone:/etc/timezone:ro"
