--- a/docker/apps/vikunja/docker-compose.yml
+++ b/docker/apps/vikunja/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       db:
         condition: service_healthy
       redis:
-        condition: service_healthy
+        condition: service_started
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
@@ -49,7 +49,7 @@ services:
       - "/etc/localtime:/etc/localtime:ro"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u vikunja --password=$(< /run/secrets/MYSQL_PWD)"]
+      test: ["CMD", "mysqladmin ping -h localhost"]
       interval: 10s
       start_period: 20s
     labels:
