--- a/docker/apps/vikunja/docker-compose.yml
+++ b/docker/apps/vikunja/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "7802:3456"
     volumes:
       - "/opt/data-docker/vikunja/files:/app/vikunja/files"
-      - "/opt/data-docker/vikunja/config:/app/vikunja/.config"
+      - "/opt/data-docker/vikunja/config/config.yml:/app/vikunja/vikunja/config.yml"
       - "/opt/data-docker/vikunja/logs:/app/logs"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
