--- a/docker/apps/vikunja/docker-compose.yml
+++ b/docker/apps/vikunja/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "7802:3456"
     volumes:
-      - "/opt/data-docker/vikunja/files:/app/vikunja/files"
+      - "/opt/data-docker/vikunja:/app/vikunja"
       - "/opt/data-docker/vikunja/logs:/app/logs"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
