--- a/docker/apps/vikunja/docker-compose.yml
+++ b/docker/apps/vikunja/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     ports:
       - "7802:3456"
     volumes:
-      - "/opt/data-docker/vikunja/app:/app/vikunja"
-      - "/opt/data-docker/vikunja/logs:/app/logs"
+      - "/opt/data-docker/vikunja/app/files:/app/vikunja/files"
+      - "/opt/data-docker/vikunja/logs:/app/vikunja"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
     depends_on:
