--- a/docker/apps/penpot/.env
+++ b/docker/apps/penpot/.env
@@ -1,4 +1,4 @@
-PENPOT_FLAGS=enable-registration enable-login-with-password enable-smtp
+PENPOT_FLAGS=enable-registration enable-login-with-password enable-smtp enable-prepl-server
 # Database
 PENPOT_DATABASE_USERNAME=
 PENPOT_DATABASE_URI=
@@ -17,4 +17,5 @@ PENPOT_REDIS_URI=redis://penpot-redis/0
 PENPOT_PUBLIC_URI=
 # Telemetry
 PENPOT_TELEMETRY_ENABLED=false
-
+# secure Key
+PENPOT_SECRET_KEY=
