--- a/docker/apps/penpot/.env
+++ b/docker/apps/penpot/.env
@@ -1,4 +1,4 @@
-PENPOT_FLAGS=enable-registration enable-login-with-password enable-smtp enable-prepl-server
+PENPOT_FLAGS=enable-registration enable-login-with-password enable-smtp
 # Database
 PENPOT_DATABASE_USERNAME=
 PENPOT_DATABASE_URI=
@@ -19,3 +19,6 @@ PENPOT_PUBLIC_URI=
 PENPOT_TELEMETRY_ENABLED=false
 # secure Key
 PENPOT_SECRET_KEY=
+# backend port
+PENPOT_HTTP_SERVER_HOST=0.0.0.0
+PENPOT_HTTP_SERVER_PORT=6060
