--- a/docker/apps/penpot/.env
+++ b/docker/apps/penpot/.env
@@ -22,3 +22,5 @@ PENPOT_SECRET_KEY=
 # backend port
 PENPOT_HTTP_SERVER_HOST=0.0.0.0
 PENPOT_HTTP_SERVER_PORT=6060
+PENPOT_ASSETS_STORAGE_BACKEND=assets-fs
+PENPOT_STORAGE_ASSETS_FS_DIRECTORY=/opt/data/assets
